shift the banner up 30px instead of fixed height 30px

--- a/scss/modules/_index.scss
+++ b/scss/modules/_index.scss
@@ -922,14 +922,19 @@ span.hint {
 .banner-container {
 	margin: 0;
 	position: relative;
+	top: -30px;
 	.success-msg {
 		font-size: 1.2rem;
+		@media screen and (max-width: 768px) {
+			font-size: 1rem;
+		}
 	}
 }
 
 .success-msg {
 	position: absolute;
 	width: 100%;
+	height: 1.2rem;
 	padding: 15px;
 	border-radius: 4px;
 	background: #42b466;
@@ -939,15 +944,15 @@ span.hint {
 	font-size: 1.2rem;
 	z-index: 1;
 
-	-webkit-animation: fadein 5s;
-	-webkit-animation-fill-mode: forward;
-	-moz-animation: fadein 5s;
+	-webkit-animation: fadein 3s;
+	-webkit-animation-fill-mode: both;
+	-moz-animation: fadein 3s;
 	-moz-animation-fill-mode: both;
-	-ms-animation: fadein 5s;
+	-ms-animation: fadein 3s;
 	-ms-animation-fill-mode: both;
-	-o-animation: fadein 5s;
+	-o-animation: fadein 3s;
 	-o-animation-fill-mode: both;
-	animation: fadein 5s;
+	animation: fadein 3s;
 	animation-fill-mode: both;
 
 	&:before {
@@ -955,6 +960,7 @@ span.hint {
 		font-family: FontAwesome;
 		margin-right: 5px;
 	}
+
 }
 
 @keyframes fadein {
@@ -978,7 +984,6 @@ span.hint {
 @-moz-keyframes fadein {
     0% {
         opacity: 0;
-        display: block;
     }
     10% {
         opacity: 1;
@@ -997,7 +1002,7 @@ span.hint {
 @-webkit-keyframes fadein {
     0% {
         opacity: 0;
-        display: block;
+        height: 20px;
     }
     10% {
         opacity: 1;
@@ -1011,12 +1016,10 @@ span.hint {
         opacity: 0;
     }
 }
-
 /* Internet Explorer */
 @-ms-keyframes fadein {
     0% {
         opacity: 0;
-        display: block;
     }
     10% {
         opacity: 1;
